<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="A_1_PRG_Main_Master" Id="{f5cadd41-0b0d-4992-977e-5b237965be89}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM A_1_PRG_Main_Master
VAR
	
	rtrigButton             				: ARRAY[1..3] OF Tc2_Standard.R_TRIG;
	ftrigButton             				: ARRAY[1..3] OF Tc2_Standard.F_TRIG; 
	
	fbStringFormatter       				: Tc2_Utilities.FB_FormatString;
	fbEventsManager							: FB_EventsManager;
	
	ntShutdown								: TC2_Utilities.NT_Shutdown;
	closeChrome 							: NT_StartProcess;
	tonUserLogOut							: TON;
	fbUserLog								: FB_UserLog;
	
	nFindAdm								: INT;
	nFindEng								: INT;
	nFindOpe								: INT;
	sUserGroupName							: STRING (255);
	sAdmGroup								: STRING (255)							:= 'Administrator';
	sEngGroup								: STRING (255)							:= 'Engineer';
	sOpeGroup								: STRING (255)							:= 'Operator';
	
	rEfficency								: STRING(510);
	
	fbSystemTime							: NT_GetTime;
	
////////////////////////////////////////////////////////////////////////////////////CSV////////////////////////////////////////////////////////////////////////////	

	stEventsCSVProcess						:  ST_CSVProcess;
	fbWriteDataToCSV_Events					: FB_WriteDataToCSV;
	i										: DINT;
	

	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[/////////////////////////////////////////////////////////////////////////////////////GENERAL/////////////////////////////////////////////////////////////////////////////////////
A_3_PRG_FaultHandling();
a_ACT_ButtonsLamps();
b_ACT_CSV();
d_ACT_ShutdownAndQuit();
e_ACT_UserLog();
f_ACT_TerminalInfo();
g_ACT_Manual();
h_ACT_Statistics();

C_1_PRG_MainHMI();
//D_1_1_PROG_Write_Data_To_CSV();
//D_2_1_PROG_Write_Data_To_CSV();

PRG_Puls();

// System PowerUP CTRL
tonSystemPowerUP(IN:=bSystemPoweringUP, PT:=tSystemPowerUP_Time);
IF tonSystemPowerUP.Q THEN 
bSystemPoweringUP:=FALSE;
END_IF


A_4_PRG_MasterSystemTime();
/////////////////////////////////////////////////////////////////////////////////////STATIONS/////////////////////////////////////////////////////////////////////////////////////

B_1_1_PRG_Master_Station_1(CMD := CMD_Station1);
B_2_1_PRG_Master_Station_2(CMD := CMD_Station2);
B_3_1_PRG_Master_Station_3(CMD := CMD_Station3);

/////////////////////////////////////////////////////////////////////////////////////PROCESS/////////////////////////////////////////////////////////////////////////////////////

A_2_PRG_MachineCtrl();

/////////////////////////////////////////////////////////////////////////////////////EVENT LOG/////////////////////////////////////////////////////////////////////////////////////

fbEventsManager	(			//INPUTS
							bPulse 							:= stPuls.bFlash10Hz, 
							bResetFaults 					:= bResetTest, 
							stStationEvents 				:= stStationEvents,
							sSystemTime						:= sSystemTime,
							sSystemDate						:= sSystemDate,
 							stEventsAssigment				:= stEventsAssigment,
							
							//OUTPUTS
							astActiveEvents 				=> astActiveEvents,
							astEventsHistory				=> astEventsHistory
							);



////////////////////////////////////////////////////////////////////////////////////SYSTEM DATE & TIME/////////////////////////////////////////////////////////////////////////////////////

fbSystemTime( START := stPuls.bFlash10Hz, TIMESTR => stSystemTime);
	

sSystemTime					:= 	CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wHour), STR2 := CONCAT( STR1 := ':', STR2 := 
								CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wMinute), STR2 := 
								CONCAT(STR1 := ':', STR2 := WORD_TO_STRING(stSystemTime.wSecond)))));
								
sSystemDate					:= 	CONCAT( STR1 := WORD_TO_STRING(stSystemTime.wDay), STR2 := 
								CONCAT(STR1 := '/', STR2 := CONCAT(STR1 := WORD_TO_STRING(stSystemTime.wMonth), STR2 := 
								CONCAT(STR1 := '/', STR2 := WORD_TO_STRING(stSystemTime.wYear)))));








]]></ST>
    </Implementation>
    <Action Name="a_ACT_ButtonsLamps" Id="{bc3442d0-b536-4f84-a62c-f220009c35e9}">
      <Implementation>
        <ST><![CDATA[//===================================================================
stButtonsLamps.bStartButtonFallingEdge 	:= ftrigButton[1].Q ;
stButtonsLamps.bStartButtonRisingEdge 	:= rtrigButton[1].Q ;
stButtonsLamps.bStopButtonFallingEdge 	:= ftrigButton[2].Q ; 
stButtonsLamps.bStopButtonRisingEdge 	:= rtrigButton[2].Q ;  
stButtonsLamps.bResetButtonFallingEdge 	:= ftrigButton[3].Q ;
stButtonsLamps.bResetButtonRisingEdge 	:= rtrigButton[3].Q ;



ftrigButton[1](CLK :=);
rtrigButton[1](CLK						:=);
ftrigButton[2](CLK						:=);
rtrigButton[2](CLK						:=);
ftrigButton[3](CLK	:=bResetTest 		);
rtrigButton[3](CLK						:=);



//GVL_IO.dw_T11_EL2809.qRESETButton_Indicator := stPuls.bFlash2Hz AND (NOT stMachineStatus.bInitialising AND NOT stMachineStatus.bAutoCycle AND NOT stMachineStatus.bManualMode AND NOT stMachineStatus.bReadyToStart) ;
//GVL_IO.dw_T11_EL2809.qStartButton_Indicator := (stPuls.bFlash2Hz AND stMachineStatus.bReadyToStart) OR (stMachineStatus.bManualMode AND stPuls.bFlash4Hz ) ;]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_ACT_CSV" Id="{eda48c17-c939-4052-a903-aa51ced32374}">
      <Implementation>
        <ST><![CDATA[
stEventsCSVProcess.sFileNamePath						:= 'C:\Users\Sebastian.Ulloa\Desktop\GIT PROJECTS\TEMPLATES\TEMPLATE_VER1\CSV\EVENTS\';




fbWriteDataToCSV_Events( 	bWriteData					:= stEventsCSVProcess.bWriteData,
							bWriteCSV					:= stEventsCSVProcess.bWriteCSV,
							sFileNamePath				:= stEventsCSVProcess.sFileNamePath,
							sDate						:= stEventsCSVProcess.sDate,
							aDataHistoryArrayLength		:= stEventsCSVProcess.aDataHistoryArrayLength,
							nMAX_CSV_ROWS				:= stEventsCSVProcess.nMAX_CSV_ROWS,
							nMAX_CSV_COLUMNS			:= stEventsCSVProcess.nMAX_CSV_COLUMNS,
							
							bBusy						=> stEventsCSVProcess.bBusy,
							bError						=> stEventsCSVProcess.bError,
							nErrId						=>,
							aDataHistory				:= astEventsHistory);
							]]></ST>
      </Implementation>
    </Action>
    <Action Name="d_ACT_ShutdownAndQuit" Id="{b7dac9a1-fefc-426e-a57f-b21e21205edc}">
      <Implementation>
        <ST><![CDATA[closeChrome(
    NetId := '',
    PathStr := 'C:\Windows\System32\mshta vbscript:Execute("CreateObject(""WScript.Shell"").Run ""powershell -c',
    DirName := 'C:\Windows\System32\WindowsPowerShell\v1.0',
    ComndLine := 'taskkill /F /IM chrome.exe /T"", 0: window.close")',
    Start := bQuitHmi,
    TmOut := DEFAULT_ADS_TIMEOUT
);
 
bQuitHmi:= FALSE;

ntShutdown(NETID := NetAmsId, DELAY := 5, START := bShutDown);]]></ST>
      </Implementation>
    </Action>
    <Action Name="e_ACT_UserLog" Id="{804f315c-0a35-4a48-b9b3-6593241a417c}">
      <Implementation>
        <ST><![CDATA[sUserGroupName																:= sUserGroupIn;

nFindAdm	:= TC2_Utilities.FIND( 	STR1									:= sUserGroupName,
									STR2									:= sAdmGroup);
									
nFindEng	:= TC2_Utilities.FIND( 	STR1									:= sUserGroupName,
									STR2									:= sEngGroup);
					
nFindOpe	:= TC2_Utilities.FIND( 	STR1									:= sUserGroupName,
									STR2									:= sOpeGroup);
				
IF nFindAdm <> 0 THEN
	sUserGroupOut															:= 'Administrator';
ELSIF nFindEng <> 0 THEN
	sUserGroupOut															:= 'Engineer';
ELSIF nFindOpe <> 0 THEN
	sUserGroupOut															:= 'Operator';
ELSE sUserGroupOut															:= '';
END_IF

tonUserLogOut( IN := (sUserGroupOut <> 'Administrator' OR sUserGroupOut <> 'Engineer') AND bUserLoggedIn , PT := T#10M);

IF tonUserLogOut.Q THEN
	bLogOut 											:= TRUE;
ELSE bLogOut 											:= FALSE;
END_IF

rUserLoggedIn( CLK := bUserLoggedIn);

fbUserLog(	nNumberOfData								:= 250,
			bSaveSignal									:= rUserLoggedIn.Q, 
			sUser										:= sUserName,
			sGroup										:= sUserGroupOut,
			sDate										:= sSystemDate,
			sTime										:= sSystemTime,
			aDataOutput									:= stUserLog);
			








]]></ST>
      </Implementation>
    </Action>
    <Action Name="f_ACT_TerminalInfo" Id="{8299d142-9ce5-4d1b-9f3f-121127d1dbfb}">
      <Implementation>
        <ST><![CDATA[dw_T03_EL1809.stTerminalInfo.fbTerminalInfo( 	nTerminalState						:= dw_T03_EL1809.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T03_EL1809.stTerminalInfo.sTerminalInfo);
												
dw_T04_EL2809.stTerminalInfo.fbTerminalInfo(	nTerminalState						:= dw_T04_EL2809.stTerminalInfo.nTerminal_State,
												sTerminalState						=> dw_T04_EL2809.stTerminalInfo.sTerminalInfo);]]></ST>
      </Implementation>
    </Action>
    <Action Name="g_ACT_Manual" Id="{87b8b019-9eb6-46b9-b781-3301c89600c8}">
      <Implementation>
        <ST><![CDATA[

IF stMachineStatus.bReadyToStart THEN
	bEnableManual											:= TRUE;
ELSE bEnableManual											:= FALSE;
END_IF

IF nMainRegion = 5 AND stMasterCtrl.bNoImmediateFault AND stMasterCtrl.bNoCycleStopFault
	AND NOT stMasterCtrl.bCycleStopRequest AND NOT stButtonsLamps.bStopButtonFallingEdge THEN
	stMasterCtrl.bManualModeRequest							:= TRUE;
	bManualModeOffFlag										:= FALSE;
ELSE 
	stMasterCtrl.bManualModeRequest							:= FALSE; 
	bManualModeOffFlag										:= TRUE;											
END_IF

]]></ST>
      </Implementation>
    </Action>
    <Action Name="h_ACT_Statistics" Id="{00b1c5d7-138a-4e5a-aad9-c5f6ae987c75}">
      <Implementation>
        <ST><![CDATA[stStatisticsHMI[0].sName			:= 'TOTAL';

stStatisticsHMI[0].nGood		:= stStatisticsHMI[1].nGood + stStatisticsHMI[2].nGood + stStatisticsHMI[3].nGood;
stStatisticsHMI[0].nTotalGood	:= stStatisticsHMI[1].nTotalGood + stStatisticsHMI[2].nTotalGood + stStatisticsHMI[3].nTotalGood;
stStatisticsHMI[0].nBad			:= stStatisticsHMI[1].nBad + stStatisticsHMI[2].nBad + stStatisticsHMI[3].nBad;
stStatisticsHMI[0].nTotalBad	:= stStatisticsHMI[1].nTotalBad + stStatisticsHMI[2].nTotalBad + stStatisticsHMI[3].nTotalBad;

								

IF (( stStatisticsHMI[0].nGood + stStatisticsHMI[0].nBad) <> 0) THEN
	
	rEfficency							:= LREAL_TO_FMTSTR(in := (DINT_TO_REAL(stStatisticsHMI[0].nGood) /( DINT_TO_REAL(stStatisticsHMI[0].nGood) + DINT_TO_REAL(stStatisticsHMI[0].nBad))) * 100.0,iPrecision := 2, bRound := TRUE);
	stStatisticsHMI[0].nEfficency		:= CONCAT(STR1 := '%', STR2 := (rEfficency));

ELSE stStatisticsHMI[0].nEfficency		:= CONCAT(STR1 := '%', STR2 := (DINT_TO_STRING(0)));
	
END_IF

]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="A_1_PRG_Main_Master">
      <LineId Id="677" Count="2" />
      <LineId Id="753" Count="0" />
      <LineId Id="680" Count="7" />
      <LineId Id="746" Count="0" />
      <LineId Id="688" Count="57" />
      <LineId Id="373" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.a_ACT_ButtonsLamps">
      <LineId Id="2" Count="15" />
      <LineId Id="25" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.b_ACT_CSV">
      <LineId Id="16" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="36" Count="3" />
      <LineId Id="34" Count="0" />
      <LineId Id="10" Count="2" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.d_ACT_ShutdownAndQuit">
      <LineId Id="2" Count="8" />
      <LineId Id="1" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.e_ACT_UserLog">
      <LineId Id="198" Count="0" />
      <LineId Id="197" Count="0" />
      <LineId Id="194" Count="0" />
      <LineId Id="199" Count="1" />
      <LineId Id="202" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="210" Count="3" />
      <LineId Id="207" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="81" Count="1" />
      <LineId Id="79" Count="0" />
      <LineId Id="131" Count="1" />
      <LineId Id="185" Count="0" />
      <LineId Id="184" Count="0" />
      <LineId Id="186" Count="0" />
      <LineId Id="188" Count="4" />
      <LineId Id="187" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="110" Count="1" />
      <LineId Id="108" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="72" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.f_ACT_TerminalInfo">
      <LineId Id="1" Count="4" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.g_ACT_Manual">
      <LineId Id="23" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="6" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="A_1_PRG_Main_Master.h_ACT_Statistics">
      <LineId Id="2" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="20" Count="0" />
      <LineId Id="38" Count="6" />
      <LineId Id="21" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>